	* Fixed a regression in davit(1) that caused the 'Edit Affiliate Data'
	permission to fail to be enforced.
2025-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in davit(1) that caused the 'Schedule Programs'
	permission to fail to be enforced.
2025-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in davit(1) that caused the 'Edit Provider Data''
	permission to fail to be enforced.
2025-08-17 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Migrate Affiliates' dialog in davit(1).
2025-08-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in davit(1) that caused the 'Exception' section to
	fail to be included when generating an affidavit for an affiliate
	with the 'Include Airings List' checkbox unticked in the
	'Generate Affiliate Affidavit' dialog.
2025-08-18 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked layout of the 'Exception' section of affiliate affidavits
	in davit(1).
2025-08-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--email-dry-run' switch to davit(1).
	* Refactored the code for generating affidavit reminder messages in
	davit(1).
2025-08-21 Fred Gleason <fredg@paravelsystems.com>
	* Removed vestigal code for generating progress dialogs in davit(1).
2025-08-30 Fred Gleason <fredg@paravelsystems.com>
	* Modified status icons in the 'List Affiliates' dialog to show
	affidavit state in davit(1).
2025-08-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in the 'List Affiliates' dialog in davit(1) that
	'Show Affiliates Missing' month and year dropdowns to fail to be
	disabled when the check box was unticked.
2025-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up enforcement of the 'Schedule Programs' and 'Add Remarks'
	permissions in 'Manage Affiliates' in davit(1).
2025-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the 'List Users' dialog to disable the 'Edit' and 'Delete'
	buttons when no user entry was selected in davit(1).