@@ -46,6 +46,8 @@ class ListProviders : public Dialog
   void editData();
   void deleteData();
   void doubleClickedData(const QModelIndex &index);
+  void selectionChangedData(const QItemSelection &before,
+			    const QItemSelection &after);
   void closeData();
 
  protected:
